--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="mbr-section__container">
         <div>
             <ol class="carousel-indicators">
-                <li data-app-prevent-settings="" data-target="#slider-3" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider-3" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider-3" class="" data-slide-to="2"></li>
+                <li data-app-prevent-settings="" data-target="#slider-3" class="active" data-slide-to="0"></li><li data-app-prevent-settings="" data-target="#slider-3" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider-3" data-slide-to="2"></li>
             </ol>
             <div class="carousel-inner" role="listbox">
                 <div class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--bg-adapted item dark center mbr-section--full-height active" style="background-image: url(assets/images/slide1.jpg);">
@@ -40,9 +40,9 @@
                                 <div class="mbr-hero">
                                     <h1 class="mbr-hero__text">卢功靖</h1>
 
-                                    <p class="mbr-hero__subtext">我是华中科技大学新闻专业大四的学生，即将进入南京大学进行硕士阶段的学习。未来研究兴趣是计算传播学。</p>
+                                    <p class="mbr-hero__subtext">我是南京大学研究生一年级的学生，所学专业是新闻学，未来研究兴趣是计算传播学。</p>
                                 </div>
-                                <div class="mbr-buttons btn-inverse mbr-buttons--left mbr-buttons--right"><a class="mbr-buttons__btn btn btn-lg btn-danger" href="page1.html#header3-n" target="_blank">点击了解更多的我</a>  </div>
+                                <div class="mbr-buttons btn-inverse mbr-buttons--left mbr-buttons--right"><a class="mbr-buttons__btn btn btn-lg btn-danger" href="page1.html#header3-n" target="_blank">点击了解更多的我</a>    </div>
                                 </div>
                             </div>
                         </div>
@@ -98,7 +98,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive web templates</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="msg-box3-e" data-rv-view="12" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="msg-box3-e" data-rv-view="12" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 93px;">
         <div class="mbr-header mbr-header--wysiwyg row">
@@ -122,7 +122,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contacts1-20" data-rv-view="15" style="background-color: rgb(60, 60, 60);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contacts1-25" data-rv-view="108" style="background-color: rgb(60, 60, 60);">
     
     <div class="mbr-section__container container">
         <div class="mbr-contacts mbr-contacts--wysiwyg row" style="padding-top: 45px; padding-bottom: 45px;">
@@ -132,14 +132,11 @@
             <div class="col-sm-8">
                 <div class="row">
                     <div class="col-sm-4">
-                        <p class="mbr-contacts__text">ADDRESS
-<br>湖北省武汉市华中科技大学韵苑</p>
+                        <p class="mbr-contacts__text"><strong>ADDRESS</strong><br>江苏省南京市南京大学仙林校区<br><br></p>
                     </div>
                     <div class="col-sm-4">
-                        <p class="mbr-contacts__text">CONTACTS
-<br>Email: 824829880@qq.com
-<br>Wechat: ShinnyLuX 
-<br>QQ: 824829880</p>
+                        <p class="mbr-contacts__text"><strong>CONTACTS</strong><br>
+Email: 824829880@qq.com<br>Wechat:ShinyLuX<br><br></p>
                     </div>
                     <div class="col-sm-4"><ul class="mbr-contacts__list"></ul></div>
                 </div>
