--- a/page5.html
+++ b/page5.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon">
   <meta name="description" content="Site Builder Description">
   
-  <title>Page 5</title>
+  <title>科研经历</title>
   <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Roboto:700,400&subset=cyrillic,latin,greek,vietnamese">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:700,400&subset=cyrillic,latin,greek,vietnamese">
   <link rel="preload" as="style" href="assets/bootstrap/css/bootstrap.min.css">
@@ -21,7 +21,7 @@
   
 </head>
 <body>
-  <section class="mbr-section mbr-section--relative mbr-section--short-paddings" id="msg-box1-1k" data-rv-view="76" style="background-color: rgb(60, 60, 60);">
+  <section class="mbr-section mbr-section--relative mbr-section--short-paddings" id="msg-box1-1k" data-rv-view="72" style="background-color: rgb(60, 60, 60);">
 
     
 
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                     <div class="mbr-section__container">
-                        <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg"><p>努力加油！</p></div>
+                        <div class="mbr-article mbr-article--auto-align mbr-article--wysiwyg"><p>承认无知，多多思考，努力加油！</p></div>
                     </div>
                 </div>
                 <div class="mbr-box__magnet mbr-box__magnet--top-left mbr-section__right col-sm-4">
@@ -49,7 +49,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="mbr-section" id="content1-1l" data-rv-view="79">
+<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="mbr-section" id="content1-1l" data-rv-view="75">
     <div class="mbr-section__container container mbr-section__container--first">
         <div class="row">
             <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><strong>随着理论学习逐渐深入，阅读文献的范围越来越广，效率也越来越高，我一定程度上跟着老师和其他学术大咖的脚步进行了一些学术思考和科研尝试。</strong></p></div>
@@ -57,7 +57,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="content1-1m" data-rv-view="80">
+<section class="mbr-section" id="content1-1m" data-rv-view="76">
     <div class="mbr-section__container container mbr-section__container--middle">
         <div class="row">
             <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><strong>《媒介批判理论》课程中，我在思考“媒介帝国主义理论”是否仍然可以成为我们分析当今全球媒介产业状况的工具？“墙”是不是有一定抵挡作用？而且发展中国家的文化生产和输出能力确实在提升。虽然可以举出实例，但仍需要理论支撑，因此我阅读了有关媒介帝国主义的中英文论文32篇，梳理了媒介帝国主义在当今面临着三重现实挑战，了解了文化接近性(Cultural Proximity)理论、文化杂交战略对媒介帝国主义理论的批判，达雅·屠苏contra-flow理论也讨论了中心——边缘模式下，“边缘性”地区的文化反抗可能。</strong></p></div>
@@ -65,7 +65,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="content1-1n" data-rv-view="81">
+<section class="mbr-section" id="content1-1n" data-rv-view="77">
     <div class="mbr-section__container container mbr-section__container--middle">
         <div class="row">
             <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><strong>我又进一步思考，“逆流”和“本土化”的影响力到底有多大？是不是也存在一些发展困难？那对后发国家而言,我们究竟应当采取何种全球化观? Colin Sparks的《全球化、发展和大众传播》一书试图用四种范式来梳理和回答媒介帝国主义，但我还是没有太理解，希望这个问题能在研究生学习阶段得以解决。</strong></p></div>
@@ -73,7 +73,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="content1-1o" data-rv-view="82">
+<section class="mbr-section" id="content1-1o" data-rv-view="78">
     <div class="mbr-section__container container mbr-section__container--last">
         <div class="row">
             <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><strong>在该课程的结课论文中，我选取“女性主义”为研究主题，从日常生活中关注到的媒介建构的女性形象误区开始思考，衍生到“大女主”电视剧的批判与反思，以“媒介仪式”切入分析，特纳在《仪式过程》中讲到两种仪式净化的剧本：“身份翻转”和“身份提升”，我发现“大女主”剧并没有真正扭转女性的媒介形象。为了解决媒介建构的性别不平等问题，我参考游戏《中国式家长》，初步策划了一款反映中国性别现实的独立游戏，促使人们反思生活中的性别偏见，媒体如何潜移默化的宣扬和巩固这种现状，以矫正媒介建构的性别身份不平等。</strong></p></div>
@@ -81,7 +81,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contacts1-20" data-rv-view="83" style="background-color: rgb(60, 60, 60);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contacts1-25" data-rv-view="108" style="background-color: rgb(60, 60, 60);">
     
     <div class="mbr-section__container container">
         <div class="mbr-contacts mbr-contacts--wysiwyg row" style="padding-top: 45px; padding-bottom: 45px;">
@@ -91,14 +91,11 @@
             <div class="col-sm-8">
                 <div class="row">
                     <div class="col-sm-4">
-                        <p class="mbr-contacts__text">ADDRESS
-<br>湖北省武汉市华中科技大学韵苑</p>
+                        <p class="mbr-contacts__text"><strong>ADDRESS</strong><br>江苏省南京市南京大学仙林校区<br><br></p>
                     </div>
                     <div class="col-sm-4">
-                        <p class="mbr-contacts__text">CONTACTS
-<br>Email: 824829880@qq.com
-<br>Wechat: ShinnyLuX 
-<br>QQ: 824829880</p>
+                        <p class="mbr-contacts__text"><strong>CONTACTS</strong><br>
+Email: 824829880@qq.com<br>Wechat:ShinyLuX<br><br></p>
                     </div>
                     <div class="col-sm-4"><ul class="mbr-contacts__list"></ul></div>
                 </div>
