--- a/page6.html
+++ b/page6.html
@@ -21,7 +21,7 @@
   
 </head>
 <body>
-  <section class="mbr-section mbr-section--relative mbr-section--short-paddings" id="msg-box1-1r" data-rv-view="85" style="background-color: rgb(60, 60, 60);">
+  <section class="mbr-section mbr-section--relative mbr-section--short-paddings" id="msg-box1-1r" data-rv-view="79" style="background-color: rgb(60, 60, 60);">
 
     
 
@@ -49,7 +49,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section" id="content1-1s" data-rv-view="88">
+<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="mbr-section" id="content1-1s" data-rv-view="82">
     <div class="mbr-section__container container mbr-section__container--first">
         <div class="row">
             <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><strong>我对什么感兴趣
@@ -61,12 +61,12 @@
     </div>
 </section>
 
-<section class="mbr-section" id="content1-1t" data-rv-view="89">
+<section class="mbr-section" id="content1-1t" data-rv-view="83">
     <div class="mbr-section__container container mbr-section__container--last">
         <div class="row">
             <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><strong>人工智能与大数据
 </strong></p><p>那天我们谈到人工智能也谈到了《未来简史》，此前是粗读，这次又重拿书本细读一翻。我们在咖啡会中谈到一个结论，“机器可以更好地帮我们做选择。”这句话是正确的吗？我试问自己。机器可以替我们做更好的选择/更了解我们自己，可机器又是基于什么呢？是基于理性的分析，亦或是我日常生活的轨迹和大数据，由此来替我做更好地选择。机器决策与古时候的求神问卦/占卜似乎有异曲同工之妙，都在祈求一个神秘力量（在这里我姑且理解机器决策为一个黑箱般的神秘力量）替我们做出最好的决策。但问题是，我们真的能百分百完完全全相信黑箱的神秘魔力吗？机器无法理解人类的情绪不稳定性（应该是）。人类有感情有情绪，如果排除了这些因素外，机器能不能做出准确的判断。换句话而言，排除了感情因素，我们的决策就会更好吗？
-</p><p>当然我们咖啡会上一个很有意思的讨论点就是，机器会不会取代人类？我觉得这个问题很荒谬很神奇(也许也是我太navie了）。我们会担心机器会取代人类，要征服地球，害怕人类对机器不利（这难道不是一种人类的心理吗？）机器没有感情，就没有野心，机器没有情绪，就不会害怕不会怕欺负，那为什么要害怕，要取代人类呢？没有情感与情绪，就没有动机，哪怕再聪明。这些都是我们人类心理在机器中的投射罢了。
+</p><p>当然我们咖啡会上一个很有意思的讨论点就是，机器会不会取代人类？我觉得这个问题很荒谬很神奇。我们会担心机器会取代人类，要征服地球，害怕人类对机器不利（这难道不是一种人类的心理吗？）机器没有感情，就没有野心，机器没有情绪，就不会害怕不会怕欺负，那为什么要害怕，要取代人类呢？没有情感与情绪，就没有动机，哪怕再聪明。这些都是我们人类心理在机器中的投射罢了。
 </p><p>最后，在重温未来简史中对于人与机器能力比较时候，我有很多与作者不同的观点。关于数据能力方面，因为机器的数据处理能力比人类更优秀，所以机器比人类更强大。这是以机器在用“上等马”对阵人类的“下等马”，因此这是一个不公平的对决。换句话而言，如果用人类的“上等马”对阵机器的“下等马”又会如何？例如人类的感情或是思想。随后作者又提出”信息自由“，强调的是数据与数据之间的交换与流动，认为USA之所以强大就是因为信息自由。总感觉这一章节写的比较混乱。</p><p>
 </p><p>
 </p></div>
@@ -74,7 +74,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contacts1-20" data-rv-view="90" style="background-color: rgb(60, 60, 60);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contacts1-25" data-rv-view="108" style="background-color: rgb(60, 60, 60);">
     
     <div class="mbr-section__container container">
         <div class="mbr-contacts mbr-contacts--wysiwyg row" style="padding-top: 45px; padding-bottom: 45px;">
@@ -84,14 +84,11 @@
             <div class="col-sm-8">
                 <div class="row">
                     <div class="col-sm-4">
-                        <p class="mbr-contacts__text">ADDRESS
-<br>湖北省武汉市华中科技大学韵苑</p>
+                        <p class="mbr-contacts__text"><strong>ADDRESS</strong><br>江苏省南京市南京大学仙林校区<br><br></p>
                     </div>
                     <div class="col-sm-4">
-                        <p class="mbr-contacts__text">CONTACTS
-<br>Email: 824829880@qq.com
-<br>Wechat: ShinnyLuX 
-<br>QQ: 824829880</p>
+                        <p class="mbr-contacts__text"><strong>CONTACTS</strong><br>
+Email: 824829880@qq.com<br>Wechat:ShinyLuX<br><br></p>
                     </div>
                     <div class="col-sm-4"><ul class="mbr-contacts__list"></ul></div>
                 </div>
