create github pages

--- a/page1.html
+++ b/page1.html
@@ -32,7 +32,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="mbr-section mbr-section--relative mbr-parallax-background" id="msg-box5-21" data-rv-view="20" style="background-image: url(assets/images/20190918081804-305x188.png);">
+<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section class="mbr-section mbr-section--relative mbr-parallax-background" id="msg-box5-21" data-rv-view="20" style="background-image: url(assets/images/20190918081804-305x188.png);">
     
     <div class="mbr-section__container mbr-section__container--isolated container" style="padding-top: 0px; padding-bottom: 0px;">
         <div class="row">
