create github pages

--- a/page7.html
+++ b/page7.html
@@ -45,7 +45,7 @@ Email: 824829880@qq.com<br>Wechat:ShinyLuX<br><br></p>
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/f">easy website builder</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script async src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script async src="assets/mobirise/js/script.js"></script>
