--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                                 <div class="mbr-hero">
                                     <h1 class="mbr-hero__text">卢功靖</h1>
 
-                                    <p class="mbr-hero__subtext">我是南京大学研究生一年级的学生，所学专业是新闻学。<br>未来研究兴趣是计算传播学。</p>
+                                    <p class="mbr-hero__subtext">我是南京大学新闻学研一学生，研究兴趣是计算传播学。</p>
                                 </div>
                                 <div class="mbr-buttons btn-inverse mbr-buttons--left mbr-buttons--right"><a class="mbr-buttons__btn btn btn-lg btn-danger" href="page1.html#header3-n" target="_blank">点击了解更多的我</a>    </div>
                                 </div>
@@ -98,7 +98,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="msg-box3-e" data-rv-view="12" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.info/b">create your own site for free</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="msg-box3-e" data-rv-view="12" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 93px;">
         <div class="mbr-header mbr-header--wysiwyg row">
